fixed the medium blogs issue

--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -71,7 +71,7 @@ $contactDetailHoverTS: #b5b5b5;
 // misc backgrounds
 $progressBarSpanBG: #aaa5ff;
 $iconBackground: #333;
-$appHeaderBG: #282c34;
+$appHeaderBG: #000;
 
 // misc colors
 $skillsColor: #645beb;
