--- a/src/components/socialMedia/SocialMedia.scss
+++ b/src/components/socialMedia/SocialMedia.scss
@@ -52,6 +52,11 @@
   background-color: $twitter;
 }
 
+.twitter-main {
+  display: grid;
+  align-items: center;
+}
+
 .medium i {
   background-color: $medium;
 }
